--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,45 @@
-.vscode
-__pycache__
-venv
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.settings/
+*.sublime-workspace
+*.sublime-project
+.env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
+.venv/
+env/
+
+# Node.js
+frontend/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # OS generated files #
 ######################
@@ -11,7 +50,3 @@ venv
 .Trashes
 ehthumbs.db
 Thumbs.db
-env/
-frontend/node_modules/
-
-.env
